# misu

./: .gitignore  AGENT.md  AGENTS.md  README.md  TODO.md  flake.nix
apps/backend/: .env.example  .gitignore  Cargo.toml  README.md
apps/backend/src/: admin.rs  auth.rs  config.rs  db.rs  domain.rs  error.rs  handlers.rs  main.rs  meetings.rs  models.rs
apps/backend/web/: agenda-print.html  editor.html  login.html  meetings.html  users.html
apps/miniprogram/: .gitignore  README.md  app.js  app.json  app.wxss  project.config.json  sitemap.json
apps/miniprogram/pages/booking/: booking.js  booking.json  booking.wxml  booking.wxss
apps/miniprogram/pages/checkin/: checkin.js  checkin.json  checkin.wxml  checkin.wxss
apps/miniprogram/pages/edit-meeting/: edit-meeting.js  edit-meeting.json  edit-meeting.wxml  edit-meeting.wxss
apps/miniprogram/pages/edit-profile/: edit-profile.js  edit-profile.json  edit-profile.wxml  edit-profile.wxss
apps/miniprogram/pages/me/: me.js  me.json  me.wxml  me.wxss
apps/miniprogram/pages/meeting/: meeting.js  meeting.json  meeting.wxml  meeting.wxss
apps/miniprogram/pages/misu/: misu.js  misu.json  misu.wxml  misu.wxss
apps/miniprogram/pages/prepare/: prepare.js  (+3 more)
apps/miniprogram/utils/: api.js  format.js
design/: arch.md  auth.md  domain_model.md  permissions.md
design/functionalities/: agenda.md  auth.md  check_in.md  meeting_info.md  role_booking.md  role_registration.md  timer_tool.md  voting.md
design/pages/: meeting-editor-demo.html
design/storage/: schema.md
design/web/: pages.md
design/wechat/: pages.md
